Fixed Nav Issue while on Mobile

--- a/src/scss/components/layout/_navbar.scss
+++ b/src/scss/components/layout/_navbar.scss
@@ -7,6 +7,7 @@
     width: 60vw;
     height: 100vh;
     background: #f9f9f9;
+    z-index: 999;
 }
 
 .nav-menu{
